Update ubuntu version

--- a/.github/workflows/flyway-migration.yml
+++ b/.github/workflows/flyway-migration.yml
@@ -9,7 +9,7 @@ on:
 jobs:
   FlywayMigration:
     name: Run Flyway Migrations
-    runs-on: ubuntu@latest
+    runs-on: ubuntu-latest
 
     steps:
       - name: Checkout Repository
