add terraform files

--- a/.gitignore
+++ b/.gitignore
@@ -90,4 +90,15 @@ TestResults/
 *.mdf
 *.ldf
 
-
+#terraform
+.terraform/
+*.tfstate
+*.tfstate.*
+crash.log
+override.tf
+override.tf.json
+*_override.tf
+*_override.tf.json
+.terraform.lock.hcl
+*.tfvars
+*.tfvars.json
