--- a/galaxy-cli/appsettings.json
+++ b/galaxy-cli/appsettings.json
@@ -1,6 +1,10 @@
 {
-    "ApiSettings": {
-      "BaseUrl": "http://localhost:5032/api/"
+  "ApiSettings": {
+    "BaseUrl": "http://localhost:5032/api"
+  },
+  "Authentication": {
+    "Google": {
+      "ClientId": ""
     }
-   
   }
+}
