--- a/galaxy-cli/appsettings.json
+++ b/galaxy-cli/appsettings.json
@@ -6,5 +6,19 @@
     "Google": {
       "ClientId": ""
     }
+  },
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft": "Warning"
+    },
+    "Console": {
+      "FormatterName": "Simple",
+      "FormatterOptions": {
+        "SingleLine": true,
+        "IncludeScopes": false,
+        "TimestampFormat": "HH:mm:ss "
+      }
+    }
   }
 }
